# advent-of-code

./: .gitignore  README.md
2020/: README.md  pyproject.toml
2020/data/: day_5.txt
2020/scripts/: day_1.py  day_10.py  day_11.py  day_12.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  utils.py
