[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Olga Dobromyrova <olga.dobromirova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
